pipu-api-chat-directory.yml
apiVersion: v1
kind: Service
metadata:
  name: pipu-api-chat-directory-service
spec:
  # use Ingress to access
  #type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: pipu-api-chat-directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipu-api-chat-directory
  labels:
    app: pipu-api-chat-directory
    tier: api
    group: pipu-chat
    version: v1
spec:
  selector:
    matchLabels:
      app: pipu-api-chat-directory
      tier: api
      group: pipu-chat
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: pipu-api-chat-directory
        tier: api
        group: pipu-chat
        version: v1
    spec:
      serviceAccountName: pipu-account-directory
      containers:
        - name: pipu-api-chat-directory
          image: jupiterhub/pipu-api-chat-directory:1.0.0
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 10m
              memory: 100Mi
            requests:
              cpu: 5m
              memory: 50Mi
          ports:
            - containerPort: 8080
